# deep-image-orientation-angle-detection

./: .gitignore  infer.py  processing.py  pyproject.toml
src/deep_image_orientation_angle_detection/: __init__.py
