[project]
name = "deep-image-orientation-angle-detection"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "katryo", email = "katoryo55@gmail.com" }
]
dependencies = [
    "scikit-learn~=1.3.0",
    "tqdm~=4.66.1",
    "transformers~=4.31.0",
    "tensorflow~=2.13.0",
    "Pillow~=10.0.0",
    "opencv-python~=4.8.0.76",
    "loguru~=0.7.0",
    "torch~=2.0.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
